feat: simualtion logs, rag for reuse
